[package]
name = "genztools"
version = "0.1.5"
authors = ["Hans Baker"]
edition = "2021"
license = "GPL-3.0-or-later"
description = "Tools for readability of Result and Option types for zoomers"
keywords = ["meme"]
homepage = "https://github.com/BakerNet/genztools"
repository = "https://github.com/BakerNet/genztools"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
